Adaptando os templates para mobile
Como você pode ver eu mudei praticamente todos os templates, 99% desses arquivos foi só mudar col-* pra col-md que funcionou bem, a questão é, eu estou bastante insatisfeito com algumas coisas 1 - O menu dropdown que eu não faço ideia de como fazer dum jeito bom, o principal problema que eu tive foi que em primeiro lugar ele não tá na nav-bar, nav-bar essa que tá fixed-top, ou seja ela meio que não obedece as regras do html aí acaba que em cada resolução ela tem um tamanho diferente, sendo que as vezes ela fica por cima do painel de controle, sendo que eu não sei fazer um jeito disso não acontecer sem usar javascript como eu fiz agora, fora isso a principal outra mudança foi que mais uma vez eu usei javascript pra adicionar uma col-md-8 no bloco de content, eu tava tendo muita dificuldade antes pelo fato do content não estar no grid do bootstrap, essa mudança me ajudou um pouco, basicamente meu maior problema é ter que usar javascript em coisa que era só pra precisar de html e css, ainda tem coisa pra mudar, por exemplo não vou deixar o nome da gradução e uma setinha pra baixo, só não sei ainda como vou fazer pro usuario saber que aquele menu é clicavel, tem tambem o fato desse menu não ocupar a tela inteira, ter umas bordinhas que eu to achando muito feito, por último, a questão do footer ficar bagunçado eu realmente não faço ideia do que seja, antes eu achava que era porque certos elementos estavam ocupando mais do que a width completa do aparelho, fazendo com que existisse um scroll horizontal, só que eu ajeitei isso e o problema persiste.

--- a/templates/admin/add_member_in_project.html
+++ b/templates/admin/add_member_in_project.html
@@ -66,21 +66,32 @@ function showMembers(projects) {
 }
 </script>
 {% endblock %}
+{% block styles %}
+<style>
+    @media (max-width: 768px) {
+    .col-md-6 {
+        margin-left: -6%;
+    }
+    }
+</style>
+{% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
     <br/>
-        <div class="col-xs-12" style="margin-left: -6%">
+        <div class="col-md-12" style="margin-left: -6%">
             <div class="panel panel-danger">
                 <div class="panel-heading text-center"><h4>Adicionar membro<h4/></div>
             <div class="panel-body">
                 <h5>Selecione o projeto</h5>
                 <select id="list"></select>
+                </br>
+                </br>
                 <button id="selecionar" type="button" class="btn btn-default">Selecionar</button>
             </div>
         </div>
         </div>
-        <div class="col-xs-6" style="margin-left: -6%">
+        <div class="col-md-6" style="margin-left: -6%">
             <div class="panel panel-danger">
                 <div class="panel-heading text-center"><h5>Formulário</h5></div>
                     <div class="panel-body">
@@ -108,7 +119,7 @@ function showMembers(projects) {
                     </div>
                 </div>
             </div>
-            <div class="col-xs-6">
+            <div class="col-md-6">
                 <div class="panel panel-danger">
                     <div class="panel-heading text-center"><h5>Membros presentes no projeto</h5></div>
                     <div class="panel-body">
