--- a/templates/admin/edit_subjects.html
+++ b/templates/admin/edit_subjects.html
@@ -74,23 +74,24 @@ $(document).ready(function() {
 {% block content %}
 <div class="container">
 <div class="row">
-<br/>
-<div class="col-xs-10">
-<div class="panel panel-danger" style="margin-left: -6%">
+<div class="col-md-10" style="margin-left: -5%">
+<div class="panel panel-danger">
 <div class="panel-heading text-center">
     <h4>Editar disciplinas<h4/>
 </div>
 <div class="panel-body">
-<div class="col-xs-10">
+<div class="col-md-10">
 <h5>Selecione a disciplina</h5>
 <select id="list"></select>
+</br>
+</br>
 <select id="requirements" type="select" class="btn btn-default">
     <option value="Obrigatórias" selected="selected">Obrigatórias</option>
     <option value="Eletivas">Eletivas</option>
 </select>
 <button id="edit" type="button" class="btn btn-default">Selecionar</button>
 </div>
-<div class="col-xs-10">
+<div class="col-md-10">
 <form method="POST" id="form-edit" action="{{ url_for('crud_subjects.edit_subjects') }}">
     <div class="form-group">
     {{ form.csrf_token }}
@@ -113,8 +114,6 @@ $(document).ready(function() {
     {{ form.create(class="form-control") }}
     </div>
 </form>
-</div>
-</div>
 </div>
 </div>
 </div>
