--- a/templates/public/professors.html
+++ b/templates/public/professors.html
@@ -15,7 +15,7 @@
         <h2>&raquo Docentes</h2>
     </header>
 
-    <div class="panel panel-default">
+    <div class="panel panel-default table-responsive">
         <table class="table">
             <thead>
                 <th>Nome</th>
