--- a/static/posgraduacao/css/general_admin.css
+++ b/static/posgraduacao/css/general_admin.css
@@ -97,46 +97,43 @@ section header h2{
 
 .nav-sidebar {
     margin-top: 5px;
-    margin-right: -21px; /* 20px padding + 1px border */
     margin-bottom: 20px;
     margin-left: -20px;
 }
 
 .nav-sidebar > li {
     padding-right: 20px;
-    padding-left: 20px;
     color: #34495e;
     position: relative;
 }
 
 .nav-sidebar li ul {
-    position: absolute;
     color: #34495e;
     background-color: #fff; 
-    padding: 5px;
-    border: 1px solid #ccc;
-    top: 0;
-    left: 180px;
-    margin-left: 30px;
+    padding: 0px;
     list-style: none;
-    display: none;
-    z-index: 30;
+    border: 0px;
+    background-color: #f5f5f5;
+}
+
+.collapse li {
+    border: 0px;
+}
+
+.nav-sidebar .collapse li:hover {
+    background-color: #fff;
 }
 
 ul li {
     position: relative;
 }
 
-li a {
+ul li a {
     display: block;
     color: #34495e;
-    padding: 5px;
+    padding: 10px;
     white-space: nowrap;
-}
-
-li:hover ul {
-    display:block;
-    position: absolute;
+    text-decoration: none !important;
 }
 
 .nav-sidebar > .active > a,
@@ -153,13 +150,21 @@ li:hover ul {
     margin-left: 10px;
 }
 
-@media (min-width: 768px) {
-    /* If in a desktop */
-    .content {
-        margin-left: 200px;
+@media (max-width: 768px) {
+    .mainbar {
+        margin-top: 80px;
     }
 }
 
+@media (min-width: 768px) {
+    .col-sm-3 {
+        padding-left: 5px;
+    }
+}
+
+.select2 {
+    width: 100% !important;
+}
 
 .form-success{
     margin-top: 10px;
