--- a/templates/admin/add_book.html
+++ b/templates/admin/add_book.html
@@ -4,7 +4,7 @@
 
 <div class="container">
 <div class="row">
-<div class="col-xs-6" style="margin-left: -5%">
+<div class="col-md-6" style="margin-left: -5%">
 <br/>
 <div class="panel panel-danger">
 <div class="panel-heading text-center">
