--- a/templates/admin/delete_project.html
+++ b/templates/admin/delete_project.html
@@ -49,18 +49,20 @@
         <div class="container">
         <div class="row">
         <br/>
-        <div class="col-xs-12">
+        <div class="col-md-12">
         <div class="panel panel-danger" style="margin-left: -6%">
         <div class="panel-heading text-center">
             <h4>Deletar Projeto<h4/>
         </div>
         <div class="panel-body">
-        <div class="col-xs-10">
+        <div class="col-md-10">
         <h5>Selecione o projeto</h5>
         <select id="list"></select>
+        </br>
+        </br>
         <button id="edit" type="button" class="btn btn-default">Selecionar</button>
         </div>
-        <div class="col-xs-10">
+        <div class="col-md-10">
         <form method="POST" id="form-edit" action="{{ url_for('crud_projects.delete_project') }}">
             <div class="form-group">
             {{ form.csrf_token }}
