--- a/templates/admin/delete_subjects.html
+++ b/templates/admin/delete_subjects.html
@@ -74,22 +74,24 @@ $(document).ready(function() {
 <div class="container">
 <div class="row">
 <br/>
-<div class="col-xs-10">
+<div class="col-md-10">
 <div class="panel panel-danger" style="margin-left: -6%">
 <div class="panel-heading text-center">
     <h4>Deletar disciplinas<h4/>
 </div>
 <div class="panel-body">
-<div class="col-xs-10">
+<div class="col-md-10">
 <h5>Selecione a disciplina</h5>
 <select id="list"></select>
+</br>
+</br>
 <select id="requirements" type="select" class="btn btn-default">
     <option value="Obrigatórias" selected="selected">Obrigatórias</option>
     <option value="Eletivas">Eletivas</option>
 </select>
 <button id="edit" type="button" class="btn btn-default">Selecionar</button>
 </div>
-<div class="col-xs-10">
+<div class="col-md-10">
 <form method="POST" id="form-edit" action="{{ url_for('crud_subjects.delete_subjects') }}">
     <div class="form-group">
     {{ form.csrf_token }}
