--- a/templates/admin/edit_attendance.html
+++ b/templates/admin/edit_attendance.html
@@ -31,7 +31,7 @@ $(document).ready(function() {
 
 <div class="container">
 <div class="row">
-<div class="col-xs-6" style="margin-left: -5%">
+<div class="col-md-6" style="margin-left: -5%">
 <header style="margin-top : 6.5%">
     <h2>Informações para contato</h2>
 </header>
