--- a/templates/admin/edit_documents.html
+++ b/templates/admin/edit_documents.html
@@ -44,18 +44,18 @@ $(document).ready(function() {
 <div class="container">
 <div class="row">
 <br/>
-<div class="col-xs-12">
+<div class="col-md-12">
 <div class="panel panel-danger" style="margin-left: -6%">
 <div class="panel-heading text-center">
     <h4>Editar documento<h4/>
 </div>
 <div class="panel-body">
-<div class="col-xs-10">
+<div class="col-md-10">
 <h5>Selecione o documento</h5>
 <select id="list"></select>
 <button id="edit" type="button" class="btn btn-default">Selecionar</button>
 </div>
-<div class="col-xs-10">
+<div class="col-md-10">
 <form method="POST" id="form-edit" action="{{ url_for('admin.edit_documents') }}" enctype="multipart/form-data">
     <div class="form-group">
     {{ form.csrf_token }}
