--- a/templates/admin/participations.html
+++ b/templates/admin/participations.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
 <div class="row">
-<div class="col-xs-6" style="margin-left: -5%">
+<div class="col-md-6" style="margin-left: -5%">
 <br/>
 <div class="panel panel-danger">
 <div class="panel-heading text-center">
