Retoques para as páginas funcionarem em todas as resoluções possíveis
Ainda tem uma ou outra coisa que pode ficar mais bonita, mas no geral na minha opinião já está usável

--- a/static/posgraduacao/css/general_admin.css
+++ b/static/posgraduacao/css/general_admin.css
@@ -147,12 +147,12 @@ ul li a {
 -------------------------------------------------- */
 
 .content {
-    margin-left: 10px;
+    margin-left: -5px;
 }
 
 @media (max-width: 768px) {
-    .mainbar {
-        margin-top: 80px;
+    .content {
+        margin-left: -10px;
     }
 }
 
