--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,24 +1,15 @@
 {% extends "admin/layout.html" %}
 {% block styles %}
 <style>
-    @media (min-width: 768px) {
-        .content {
-            margin-left: -200px;
-        }
+@media(max-width: 375px) {
+    .col-md-4 {
+        margin-top: 30%;
     }
-
-    @media (max-width: 768px) {
-        .content {
-            margin-top: 80px;
-        }
-    }
+}
 </style>
 {% endblock %}
-
 {% block content %}
-<div class="container">
-<div class="row">
-<div class="col-md-4 col-md-offset-5">
+<div class="col-md-4 col-md-offset-6" style="padding-left: 5%">
 <header class="text-center">
     <h2>Login</h2>
 </header>
