--- a/templates/admin/add_member_in_project.html
+++ b/templates/admin/add_member_in_project.html
@@ -40,7 +40,7 @@ $(document).ready(function() {
         })
         .done(function(data) {
             if (data.error) {
-                console.log('Krl mermão presta pra nada');
+                console.log(data.error);
             } else {
                 var projects = JSON.parse(data.projects);
                 $("tbody").empty();
