--- a/templates/admin/add_article.html
+++ b/templates/admin/add_article.html
@@ -1,12 +1,8 @@
 {% extends "admin/layout.html" %}
 
 {% block content %}
-
-<div class="container">
-<div class="row">
 <div class="col-md-6">
-<br/>
-<div class="panel panel-danger">
+<div class="panel panel-danger" style="margin-left: -4%">
 <div class="panel-heading text-center">
     <h4>Adicionar artigo<h4/>
 </div>
