--- a/templates/admin/edit_attendance.html
+++ b/templates/admin/edit_attendance.html
@@ -29,10 +29,8 @@ $(document).ready(function() {
 
 {% block content %}
 
-<div class="container">
-<div class="row">
-<div class="col-md-6" style="margin-left: -5%">
-<header style="margin-top : 6.5%">
+<div class="col-md-6" style="margin-left: -4%">
+<header>
     <h2>Informações para contato</h2>
 </header>
 <form method="POST" action="{{ url_for('crud_attendances.edit_attendance') }}">
