Pequeno ajuste nos layouts
Só mudei duas coisas, agora quando o usuário está logado vai aparecer o nick dele invés de Login no layout público, e também adicionei um "Ver página pública" pro administrador poder ir direto pra página pública quando estiver no painel de controle

--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -31,7 +31,9 @@
 
             <div class="navbar-collapse collapse">                
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"> Ver página </a></li>
+                    {% if current_user and current_user.is_authenticated %}
+                    <li><a href="/{{ current_user.pg_initials }}"> Página pública</a></li>
+                    {% endif %}
                     <li><a href="#"> Configurações </a></li>
                     <li><a href="{{ url_for('admin.logout') }}"> Sair </a></li>
                 </ul>
