--- a/templates/public/layout.html
+++ b/templates/public/layout.html
@@ -134,9 +134,13 @@
                 </ul>
                 {% endif %}
                 <ul class="nav navbar-nav navbar-right">
+                    {% if current_user and current_user.is_authenticated %}
                     <li><a href="{{ url_for('admin.index') }}">
-                        <span class="glyphicon glyphicon-user"></span> Login </a></li>
-                    
+                            <span class="glyphicon glyphicon-user"></span> {{ current_user.nick }} </a></li>
+                    {% else %}
+                    <li><a href="{{ url_for('admin.index') }}">
+                            <span class="glyphicon glyphicon-user"></span> Login </a></li>
+                    {% endif %}
                     <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <span class="glyphicon glyphicon-random"></span> Pós-Graduações <span class="caret"></a>
                         <ul class="dropdown-menu">
