Mudei a aparencia dos botões de upload + ajeitei um errinho em editar_covenants
Mechendo no projeto dos grupos de pesquisa, percebi que não dá certo colocar dois sets no mesmo dao.find_one_and_update, por isso separei, é meior feio mas funciona normalmente

--- a/templates/admin/edit_covenants.html
+++ b/templates/admin/edit_covenants.html
@@ -66,8 +66,7 @@ $(document).ready(function() {
     {{ form.initials(required='true', class="form-control") }}
     <br/>
     <label class="btn btn-default">
-        <span>Carregar logo</span>
-        {{ form.logo(style="display:none") }}
+        {{ form.logo }}
     </label>
 
     <br/>
