--- a/templates/admin/edit_documents.html
+++ b/templates/admin/edit_documents.html
@@ -68,8 +68,7 @@ $(document).ready(function() {
     {{ form.category(required='true', class="form-control") }}
     <br/>
     <label class="btn btn-default">
-        <span>Carregar documento</span>
-        {{ form.document(style="display:none")}}
+        {{ form.document }}
     </label>
     <br/>
     <br/>
