--- a/templates/admin/documents.html
+++ b/templates/admin/documents.html
@@ -25,8 +25,7 @@
     <br/>
 
     <label class="btn btn-default">
-        <span>Carregar documento</span>
-        {{ form.document(required='true', style="display:none") }}
+        {{ form.document(required='true') }}
     </label>
     <br/>
     <br/>
